--- a/.github/workflows/manual_action.yml
+++ b/.github/workflows/manual_action.yml
@@ -31,12 +31,12 @@ jobs:
           channel: 'stable'
       - run: flutter doctor
       - run: flutter pub get
-      ## - run: flutter test
-      ## build and upload production apk
+      # - run: flutter test
+      # build and upload production apk
       - run: flutter build apk --debug
-      # - uses: actions/upload-artifact@v3
-      #   with:
-      #     name: production-apk
-      #     path: build/app/outputs/flutter-apk/app-production-release.apk
-      ## build and upload development apk
+      - uses: actions/upload-artifact@v3
+        with:
+          name: production-apk
+          path: build/app/outputs/flutter-apk/app-production-release.apk
+      # build and upload development apk
       - run: flutter build apk --release
